cod-tools (unreleased)

  * Fixed:
    - cif_ddlm_dic_check:
        - corrected a validation message describing category key items
          that do not belong to the given category.
    - sdf_add_cod_data:
        - updated the handling of the <PUBCHEM_SUBSTANCE_COMMENT> data item
          to not exclude fields that contain empty parentheses.
        - updated the handling of the <PUBCHEM_SUBSTANCE_COMMENT> data item
          to not unintentionally remove various text sequences like
          "?-", "?-?", "(?)", etc.

cod-tools (3.5.0)

  * Added:
    - COD::AtomNeighbours:
        - neighbour_list_to_chemistry_mol() subroutine.
    - COD::CIF::Data::CODFlags:
        - has_dummy_sites() subroutine.
        - has_non_hydrogen_calc_sites() subroutine.
        - has_superspace_group() subroutine.
        - has_unmodelled_solvent_molecules() subroutine.
    - cif_cod_deposit:
        - the User-Agent HTTP header.
        - the '--no-use-wipe' option.
    - cif_ddlm_dic_check:
        - a check that detects duplicate dREL data names.
    - cif2xyz:
        - the '--print-datablock-name', '--print-formula-sum',
          '--print-chemical-name', '--print-lattice' options
          and their negations.
        - the '--float-format' option (default value "%21.14e").
    - sdf_add_cod_data:
        - several warning messages.
    - the 'codxyz2fract' script.
    - the 'codxyz2ortho' script.
    - the COD::XYZ module.
    - dependency installer for Fedora 35.
  * Changed:
    - cif_ddlm_dic_check:
        - updated the list of attributes that are checked for free-text
          references to data items or categories to also include
          the '_description_example.case' and '_description_example.detail'
          attributes.
    - molcif2sdf:
        - the <PUBCHEM_EXT_DATASOURCE_URL> data item value
          from "https://www.crystallography.net/"
          to "https://www.crystallography.net/cod/".
    - sdf_add_cod_data: