@@ -1,6 +1,10 @@
 cod-tools (unreleased)
 
   * Fixed:
+    - COD::Spacegroups::Lookup::COD:
+        - changed the space group IT number in the descriptions of
+          the 'F d 1 1', 'F 1 d 1', 'F 1 1 d' and 'C 1 c 1 (a-3/8,b-3/8,a+2*c)'
+          space groups from '15' to '9'.
     - cif_ddlm_dic_check:
         - corrected a validation message describing category key items
           that do not belong to the given category.
